--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,25 @@
-# Ignore node_modules directory
-node_modules/
-
-# Ignore logs
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignore build outputs
-dist/
-build/
-
-# Ignore environment files
+node_modules
+dist
+dist-ssr
+*.local
 .env
 
-# Ignore IDE files
-.vscode/
-.idea/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
