--- a/package.json
+++ b/package.json
@@ -1,52 +1,43 @@
 {
-  "name": "taskmaster22",
+  "name": "taskmaster",
+  "private": true,
   "version": "1.0.0",
-  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.7"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "server": "node server/index.js"
   },
   "dependencies": {
-    "anymatch": "^3.1.3",
-    "balanced-match": "^1.0.2",
-    "bcrypt": "^5.1.1",
-    "binary-extensions": "^2.3.0",
-    "brace-expansion": "^1.1.11",
-    "braces": "^3.0.3",
-    "chokidar": "^3.6.0",
-    "concat-map": "^0.0.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "debug": "^4.3.7",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "fill-range": "^7.1.1",
-    "glob-parent": "^5.1.2",
-    "has-flag": "^3.0.0",
-    "ignore-by-default": "^1.0.1",
-    "is-binary-path": "^2.1.0",
-    "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
+    "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "minimatch": "^3.1.2",
-    "mongoose": "^8.8.2",
-    "ms": "^2.1.3",
-    "normalize-path": "^3.0.0",
-    "picomatch": "^2.3.1",
-    "pstree.remy": "^1.1.8",
-    "readdirp": "^3.6.0",
-    "semver": "^7.6.3",
-    "simple-update-notifier": "^2.0.0",
-    "supports-color": "^5.5.0",
-    "to-regex-range": "^5.0.1",
-    "touch": "^3.1.1",
-    "undefsafe": "^2.0.5"
+    "lucide-react": "^0.344.0",
+    "mongoose": "^8.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.22.3"
   },
-  "description": ""
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
+  }
 }
